--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: mediumorchid;
+    font-family: 'Arial', sans-serif;
+    background-color: #280341;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+div {
+    background-color: #940599;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
 }
 
 a {
@@ -24,17 +32,4 @@ a:hover {
 
 a:active {
     background-color: #003f7f;
-}
-
-.images,
-.choice,
-.result {
-    width: 100%;
-    text-align: center;
-}
-
- picture img {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
 }
