--- a/tareasApp/style.css
+++ b/tareasApp/style.css
@@ -1,33 +1,58 @@
-body{
+body {
+    width: 100vw;
     height: 100vh;
-    width: 100wv;
     display: grid;
     place-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgb(59, 11, 68);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0;
+    margin: 0%;
+    background-color: rgb(59, 1, 114);
 }
-.container{
+
+.container {
     width: 80%;
     text-align: center;
+
 }
+
 .alert {
     width: 100%;
-    /* height: 100px; */
     margin: 10px;
     padding: 10px 20px;
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
 }
-.danger{
-    border: 3px  solid red;
-    background-color: rgb(241, 73, 73);
+
+
+.danger {
+    border: 1px solid red;
+    background-color: rgba(180, 3, 3, 0.453);
 }
-.warning{
-    border: 3px solid orange;
-    background-color: darkorange;
+
+.warning {
+    border: 2.5px solid orange;
+    background-color: rgb(151, 142, 10);
 }
-.sucess{
-    border: 3px solid green;
-    background-color: forestgreen;
+
+.success {
+    border: 5px solid green;
+    background-color: rgb(4, 167, 4);
+}
+a {
+    display: block;
+    margin: 10px 0;
+    padding: 10px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #007BFF;
+    border-radius: 5px;
+}
+
+a:hover {
+    background-color: #0056b3;
+}
+
+a:active {
+    background-color: #003f7f;
 }
